# randtest31

./: .gitignore  .gitmodules  CMakeLists.txt  HACKING.md  README.md
LICENSES/: LicenseRef-testu01.txt
src/: CMakeLists.txt  bbattery31.c  main.c  rngs.def
src/rng/: bsd_rand_r.c  freebsd_rand.c  freebsd_random.c  glibc_rand_r.c  glibc_random.c  mulberry32.c  musl_rand.c  musl_rand_r.c  musl_random.c  netbsd_rand.c  newlib_rand.c  newlib_rand_r.c  openbsd_rand_r.c  pcg.h  pcg32.c  pcg32f.c  pcg32si.c  splitmix32.c  xorshift32.c
